[package]
name = "app"
version = "0.1.0"
edition = "2021"
default-run = "app"  


[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
actix-web = "4.9.0"
actix-cors = "0.7"
aes = "0.7"    
bcrypt = "0.10"
block-modes = "0.8"  
chrono = "0.4"
curve25519-dalek = "4.1.3"
dotenvy = "0.15.7"
env_logger = "0.10"
hex = "0.4"   
jsonwebtoken = "9.3.0"        
juniper = "0.16.1"
log = "0.4"
rand = "0.8"    
sea-orm = { version = "0.11.3", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }            
serde = { version = "1.0", features = ["derive"] }
solana-sdk = "=1.18.25"
sha2 = "0.9.8"
sqlx = "=0.6.3"
uuid = { version = "1.0", features = ["v4"] }

teloxide = { version = "0.13", features = ["macros"] }
pretty_env_logger = "0.4"