[package]
name = "app"
version = "0.1.0"
edition = "2021"
default-run = "app"  


[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
actix-web = "4.9.0"
actix-cors = "0.7"
actix-rt = "2.2.0"
aes = "0.7"
anyhow = "1.0"
background-jobs = "0.15.0"
base64 = "0.13"
bcrypt = "0.10"
bincode = "1.3"
block-modes = "0.8"  
chrono = "0.4"
curve25519-dalek = "4.1.3"
dotenvy = "0.15.7"
env_logger = "0.10"
futures = "0.3"
hex = "0.4"   
jsonwebtoken = "9.3.0"        
juniper = "0.16.1"
lazy_static = "1.5.0"
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
sea-orm = { version = "0.11.3", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }            
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9.8"
solana-account-decoder = "1.14"
solana-client = "1.14"
solana-sdk = "=1.18.25"
spl-token = "3.5"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls"] }
teloxide = { version = "0.13", features = ["macros"] }
tokio = {version = "1.40.0", features =  ["full"] }
tokio_schedule = "0.3.0"
uuid = { version = "1.0", features = ["v4"] }
